# client-c

./: .gitignore  CMakeLists.txt  fileWrite.c  main.c  rcvMsg.c  sendMsg.c
client/: Client.c
client/connection/: TcpConnection.c  UdpConnection.c
client/file/: fileWrite.c
client/msg/: MsgQueue.c  MsgType.h  msg_queue.c
client/pojo/: Frame.c  Frame.h  Packet.h  PacketGroup.c  PacketGroup.h  PacketSendTime.h
client/req/: DescribeReq.c  NackReq.c  PauseSeq.c  Pong.c  sendTcpMsg.c
client/task/: TcpTask.c  UdpTask.c  checkFramTask.h  checkFrameTask.c  checkRetryTask.c
client/test/: con_hashmap.h  hash_entry.h  test.c
command/: ClientInitReqCommand.c  ClientInitReqCommand.h  ClientInitRespCommand.c  ClientInitRespCommand.h  CommandLenght.h  CommandType.h  DesceribeReqCommand.c  DesceribeReqCommand.h  DescribeRespCommand.c  DescribeRespCommand.h  NackReqCommand.c  NackReqCommand.h  PauseReqCommand.c  PauseReqCommand.h  PauseRespCommand.c  PauseRespCommand.h  PingCommand.c  PingCommand.h  PongCommand.c  PongCommand.h  StartReqCommand.c  StartReqCommand.h  StartRespCommand.c  StartRespCommand.h  response.h
packet/: ClientInitReqPacket.c  ClientInitReqPacket.h  ClientInitRespPacket.c  ClientInitRespPacket.h  FramePacket.c  FramePacket.h  PacketLength.h  PacketType.h
trendline/: BandwidthUsage.h  BitrateChangeState.h  DelayHistory.c  DelayHistory.h  PacketGroupDelay.c  PacketGroupDelay.h  TrendCalculater.c
utils/: ByteTools.c  ListNodeTools.c  StringUtils.c  ThreadUtils.c  timeStamp.c
